# mstd

./: .gitignore  Arena.hpp  CMakeLists.txt  README.md  SmallString.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  demo  demo.cpp  geometry  main.cpp  makefile  memory.hpp  primitive.h
inc/: memory  misc  primitive.h
inc/geometry/: Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Plane.hpp  Rotor.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
inc/geometry.d/: Matrix3.hpp  Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
inc/memory/: Arena.hpp  ArenaTree.hpp  Tree.hpp  allocator.hpp  zcurve.hpp
inc/memory.d/: Arena.hpp  allocator.hpp  prefetch.hpp
inc/misc/: primitive.h
inc/misc.d/: errorText.h  primitive.h
inc/mstd/: geometry  memory
inc/mstd/geometry.d/: Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Rotor.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
inc/mstd/memory.d/: Arena.hpp  ArenaList.hpp  DynamicTree.hpp  Stack.hpp  Tree.hpp  allocator.hpp  prefetch.hpp
inc/mstd/misc.d/: errorText.h  primitive.h
inc/mstd/network.d/: Socket.hpp  TCPServer.hpp  networkInit.hpp
pkg/: geometry  memory  misc
